src/components/modus-wc-tabs/modus-wc-tabs.scss
/**
* This component uses Tailwind CSS and DaisyUI.
* Only add styles here that should not be applied by Tailwind, Daisy, or the theme.
*/

modus-wc-tabs {
  .modus-wc-tab modus-wc-icon + span,
  .modus-wc-tab span + modus-wc-icon {
    padding-inline-start: var(--modus-wc-spacing-xs);
  }
}

modus-wc-tabs .modus-wc-tabs {
  align-items: center;
  border-top-left-radius: var(--modus-wc-border-radius-md);
  border-top-right-radius: var(--modus-wc-border-radius-md);
  display: inline-flex;
  font-weight: var(--modus-wc-font-weight-bold);

  @include sizing-tokens;

  // For centering purposes
  modus-wc-icon {
    .modus-wc-icon--xs {
      line-height: calc(var(--modus-wc-line-height-sm) + 0.25rem);
    }

    .modus-wc-icon--sm {
      line-height: var(--modus-wc-line-height-md);
    }

    .modus-wc-icon--md {
      line-height: var(--modus-wc-line-height-lg);
    }

    .modus-wc-icon--lg {
      line-height: var(--modus-wc-line-height-xl);
    }
  }

  &.modus-wc-tabs-lifted
    > .modus-wc-tab:is(.modus-wc-tab-active, [aria-selected='true']):not(
      .modus-wc-tab-disabled
    ):not([disabled]),
  .modus-wc-tabs-lifted > .modus-wc-tab:is(input:checked) {
    color: var(--modus-wc-color-primary);
  }

  &.modus-wc-tabs-bordered {
    .modus-wc-tab:is(.modus-wc-tab-active, [aria-selected='true']):not(
        .modus-wc-tab-disabled
      ):not([disabled]) {
      background-color: var(--modus-wc-color-base-page);
      border-bottom-color: var(--modus-wc-color-primary);
      border-bottom-width: var(--modus-wc-border-width-lg);
    }
  }

  &.modus-wc-tab .modus-wc-tab-active {
    .modus-wc-tab:is(input:checked) {
      color: var(--modus-wc-color-primary);
    }
  }
}

modus-wc-tabs .modus-wc-tab {
  border-radius: var(--tab-radius) var(--tab-radius) 0 0;
  height: inherit;

  @include common-states;

  &-active {
    background-color: var(--modus-wc-color-base-page);
    color: inherit;
  }
}

[data-theme='modus-classic-light'] modus-wc-tabs .modus-wc-tab {
  --tab-color: var(--modus-wc-color-trimble-gray);
  --tab-bg: var(--modus-wc-color-white);
  --fallback-bc: var(--modus-wc-color-gray-2);

  &:not(.modus-wc-tab-active):not(.modus-wc-tab-disabled):hover {
    background-color: var(--modus-wc-color-blue-pale);
  }

  &:not(.modus-wc-tab-disabled):active {
    --tab-color: var(--modus-wc-color-gray-10);
    --tab-border: var(
      --modus-wc-border-width-xs
    ); // ! This is rendered as 1px due to a calc(+1)

    --tab-bg: var(--modus-wc-color-white);

    // Unfortunately needed, otherwise browsers sometimes don't apply.
    background-color: var(--modus-wc-color-trimble-blue-pale) !important;
  }

  &.modus-wc-tab-active {
    --tab-color: var(--modus-wc-color-gray-10);
    --tab-bg: var(--modus-wc-color-blue-light);

    background-color: var(--modus-wc-color-white);

    --fallback-p: var(--modus-wc-color-blue-light);
    --fallback-bc: transparent;
  }

  .modus-wc-tabs-lifted
    > .modus-wc-tab:is(.modus-wc-tab-active, [aria-selected='true']):not(
      .modus-wc-tab-disabled
    ):not([disabled]),
  .modus-wc-tabs-lifted > .modus-wc-tab:is(input:checked) {
    color: var(--modus-wc-color-white) !important;
  }
}

[data-theme='modus-classic-dark'] modus-wc-tabs .modus-wc-tab {
  --tab-color: var(--modus-wc-color-white);
  --tab-bg: var(--modus-wc-color-gray-8);
  --fallback-bc: var(--modus-wc-color-gray-8);

  &:not(.modus-wc-tab-active):not(.modus-wc-tab-disabled):hover {
    background-color: var(--modus-wc-color-highlight-blue-pale);
    color: var(--modus-wc-color-gray-10);
  }

  &:not(.modus-wc-tab-disabled):active {
    // Unfortunately needed, otherwise browsers sometimes don't apply.
    background-color: var(--modus-wc-color-highlight-blue) !important;
  }

  &.modus-wc-tab-active {
    --tab-color: var(--modus-wc-color-white);
    --tab-bg: var(--modus-wc-color-blue-light);

    // rgba(var(--modus-wc-color-highlight-blue), 0.3) applied on a background of --modus-wc-color-neutral
    border-bottom-width: var(--modus-wc-border-width-xs);

    --fallback-p: var(--modus-wc-color-blue-light);
    --fallback-bc: var(--modus-wc-color-highlight-blue);
  }

  &.modus-wc-tab-disabled {
    --tab-color: var(--modus-wc-color-gray-2);

    background-color: var(--modus-wc-color-gray-9);
  }

  .modus-wc-tabs-lifted
    > .modus-wc-tab:is(.modus-wc-tab-active, [aria-selected='true']):not(
      .modus-wc-tab-disabled
    ):not([disabled]),
  .modus-wc-tabs-lifted > .modus-wc-tab:is(input:checked) {
    color: var(--modus-wc-color-white);
  }
}

